# Droplet

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.js  pyproject.toml  serial_bridge.py
.claude/: settings.local.json
app/: main.py  mock_store.py  schemas.py
app/routers/: waste.py
backend/: main.py  requirements.txt
backend/tests/: conftest.py  test_sensor_api.py
e2e/: buzzer-alert.spec.js  goal-daily-limit.spec.js
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  format.ts  index.css  types.ts
frontend/src/components/: AmbientBackdrop.tsx  DropletMark.tsx  PeriodChips.tsx  TrendChart.tsx
scripts/: serial_to_api.py
src/: App.jsx  index.css
src/components/: BuzzerAlert.jsx  Icons.jsx  NavBar.jsx  WaterFill.jsx
src/pages/: DevicesPage.jsx  GoalsPage.jsx  HomePage.jsx  ProfilePage.jsx
src/store/: useSensorStore.js
